--- a/storefront-child/build_assets/scss/blocks/_contact-form.scss
+++ b/storefront-child/build_assets/scss/blocks/_contact-form.scss
@@ -16,7 +16,7 @@
         padding: 32px 16px 32px 16px;
     }
 
-    &__get-a-quote, &__get-a-quote-title, &__get-in-touch-title {
+    &__get-in-touch, &__get-a-quote-title, &__get-in-touch-title {
         display: none;
     }
 
@@ -292,7 +292,7 @@
                 }
             }
         }
-        input[type=text], input[type=email], input[type=tel] {
+        input[type=text], input[type=email], input[type=tel], input[type=date] {
             width: 232px !important;
             margin-top: 24px;
             @media (max-width: 1200px) {
@@ -394,6 +394,10 @@
             display: flex;
             margin-top: 24px;
 
+            @media (max-width: 690px) {
+                flex-wrap: wrap;
+            }
+
             @media (max-width: 500px) {
                 display: block;
             }
@@ -475,6 +479,23 @@
 
             .wpcf7-form-control-wrap {
                 margin-right: 16px;
+            }
+
+            .event-capture {
+                span {
+                    margin-right: 24px;
+                    @media (max-width: 690px) {
+                        margin-top: 24px;
+                    }
+                }
+                p {
+                    @media (max-width: 510px) {
+                        display: block;
+                        input {
+                            margin-top: 20px;
+                        }
+                    }
+                }
             }
         }
         .submit-container {
