--- a/storefront-child/build_assets/scss/blocks/_environment.scss
+++ b/storefront-child/build_assets/scss/blocks/_environment.scss
@@ -38,117 +38,163 @@
         margin-top: 32px;
         margin-bottom: 21px;
     }
-    &__text {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        column-gap: 25px;
-        @media (max-width: $tablet) {
-            display: none;
-        }
-        &__option {
-            display: flex;
-            align-items: flex-start;
-            width: calc(50% - 12.5px);
-            margin-bottom: 32px;
-            column-gap: 16px;
-            @media (max-width: $tablet) {
-                display: none !important;
-            }
-            &__image {
-                width: 28.5px;
-                height: 26px;
-                background-position: center center;
-                background-size: contain;
-            }
+    // &__text {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: space-between;
+    //     column-gap: 25px;
+    //     @media (max-width: $tablet) {
+    //         display: none;
+    //     }
+    //     &__option {
+    //         display: flex;
+    //         align-items: flex-start;
+    //         width: calc(50% - 12.5px);
+    //         margin-bottom: 32px;
+    //         column-gap: 16px;
+    //         @media (max-width: $tablet) {
+    //             display: none !important;
+    //         }
+    //         &__image {
+    //             width: 28.5px;
+    //             height: 26px;
+    //             background-position: center center;
+    //             background-size: contain;
+    //         }
             
-            &__paragraph {
-               width: 100%;
-            }
+    //         &__paragraph {
+    //            width: 100%;
+    //         }
+    //     }
+    // }
+    &__text__container {
+        display: flex;
+        width: 100%;
+        column-gap: 20px;
+        @media (max-width: 980px) {
+            column-gap: 0;
+            flex-direction: column;
         }
     }
-    &__text-mobile {
-            display: none;
+    &__text {
+        display: block;
+        width: 50%;
+        @media (max-width: 980px) {
+            width: 100%;
+        }
 
-            @media (max-width: $tablet) {
-                display: block;
+        &__title {
+            &.ui-accordion-header {
+                padding: 0;
+                background-color: transparent;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0;
+                border: none;
+                border-radius: 10px;
+                padding: 16px;
+                background-color: $light-mercury !important;
+                // margin-bottom: 24px;
 
-                &__title {
-                    &.ui-accordion-header {
-                        padding: 0;
-                        background-color: transparent;
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-                        margin: 0;
-                        border: none;
-                        border-radius: 10px;
-                        padding: 16px;
-                        background-color: $light-mercury !important;
-                        // margin-bottom: 24px;
-
-                        &:focus {
-                            outline: none !important;
-                            text-decoration: none;
-                        }
-                    }
-                    &.ui-accordion-header-active {
-                        margin-bottom: 0px;
-                        border-radius: 10px 10px 0 0;
-                        p {
-                            color: black;
-                        }
-                        svg {
-                            transform: rotate(180deg);
-                        }
-                    }
-                    &__icon {
-                        display: flex;
-                        align-items: center;
-                        p {
-                            margin-left: 13px;
-                            margin-right: 13px;
-                        }
-                    }
-                    .icon {
-                        width: 15px;
-                        svg {
-                            cursor: pointer;
-                            transition: transform 0.2s ease-in;
-                        }
-
-                    }
-                }
-
-                &__option-mobile {
-                    margin-bottom: 24px;
-                }
-
-                .ui-accordion-header-icon {
-                    display: none;
-                }
-
-                &__text {
-
-                    &.ui-accordion-content {
-                        background-color: transparent;
-                        border: none;
-                        margin: 0;
-                        opacity: 0;
-                        padding: 27px 16px 19px 16px;
-                        transition: opacity 0.3s ease-in;
-                    }
-
-                    &.ui-accordion-content-active {
-                        padding: 27px 16px 19px 16px;
-                        opacity: 1 !important;
-                        transition: opacity 0.3s ease-in;
-                        background-color: $light-mercury;
-                        // margin-bottom: 24px;
-                        border-radius: 0 0 10px 10px;
-                    }
+                &:focus {
+                    outline: none !important;
+                    text-decoration: none;
                 }
             }
+            &.ui-accordion-header-active {
+                margin-bottom: 0px;
+                border-radius: 10px 10px 0 0;
+                p {
+                    color: black;
+                }
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
+            &__icon {
+                display: flex;
+                align-items: center;
+                p {
+                    margin-left: 13px;
+                    margin-right: 13px;
+                }
+            }
+            .icon {
+                width: 15px;
+                svg {
+                    cursor: pointer;
+                    transition: transform 0.2s ease-in;
+                }
+
+            }
+            a {
+                font-family: $montserrat;
+                font-weight: 400;
+                font-size: 16px;
+                color: $seaFoam !important;
+                cursor: pointer;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-underline-offset: 3px;
+                }
+
+                &:active, &:focus {
+                    text-decoration: underline;
+                    text-underline-offset: 3px;
+                    color: $vineyard;
+                }
+            }
+        }
+
+        &__option-mobile {
+            margin-bottom: 24px;
+        }
+
+        .ui-accordion-header-icon {
+            display: none;
+        }
+
+        &__text {
+
+            &.ui-accordion-content {
+                background-color: transparent;
+                border: none;
+                margin: 0;
+                opacity: 0;
+                padding: 27px 16px 19px 16px;
+                transition: opacity 0.3s ease-in;
+            }
+
+            &.ui-accordion-content-active {
+                padding: 27px 16px 19px 16px;
+                opacity: 1 !important;
+                transition: opacity 0.3s ease-in;
+                background-color: $light-mercury;
+                // margin-bottom: 24px;
+                border-radius: 0 0 10px 10px;
+            }
+
+            a {
+                font-family: $montserrat;
+                font-weight: 400;
+                font-size: 16px;
+                color: $seaFoam;
+                cursor: pointer;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-underline-offset: 3px;
+                }
+
+                &:active, &:focus {
+                    text-decoration: underline;
+                    text-underline-offset: 3px;
+                    color: $vineyard;
+                }
+            }
+        }
 
     }
 
