--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -216,6 +216,11 @@
             left:0px;
         }
         &--custom{
+            a {
+                position: relative;
+                top: initial;
+                left: initial;
+            }
             p{
                 text-align: center;
             }
