--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -89,11 +89,17 @@
             }
         }
         span.wpcf7-not-valid-tip {
-            margin-top: 10px !important;
+            margin-top: 0px !important;
             width: 100% !important;
-            text-align: center;
+            text-align: left;
             font-size: 0.6em !important;
             margin-right: 0 !important;
+        }
+        .wpcf7-not-valid {
+            border: 2px solid #D80101 !important;
+            &.wpcf7-recaptcha {
+                border: initial !important;
+            }
         }
         .container-captcha .wpcf7-not-valid-tip {
             width: 100% !important;
