--- a/storefront-child/build_assets/scss/blocks/_hero.scss
+++ b/storefront-child/build_assets/scss/blocks/_hero.scss
@@ -801,6 +801,11 @@
             display: flex;
             align-items: center;
             height: 100%;
+            opacity: 0;
+            transition: opacity 0.7s ease-in-out;
+            &.opacity {
+                opacity: 1;
+            }
         }
         &__image {
             height: 100%;
