privacy policy cookie banner

--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -79,6 +79,7 @@
             }
             @media (max-width: 650px) {
                 width: 100% !important;
+                min-width: 100%;
             }
             &:nth-child(3) {
                 width: 309px;
