--- a/storefront-child/build_assets/scss/blocks/_contact-form.scss
+++ b/storefront-child/build_assets/scss/blocks/_contact-form.scss
@@ -306,6 +306,7 @@
             }
             @media (max-width: 650px) {
                 width: 100% !important;
+                min-width: 100%;
             }
             &:nth-child(3) {
                 width: 309px;
