--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -85,14 +85,10 @@
                 a {
                     width: 100%;
                     display: block;
-                    padding: 15px 0 15px 0;
+                    padding: 8px 0 8px 0;
                     padding-left: 15px;
-                    border-radius: 20px;
+                    border-radius: 8px;
                     border: 1px solid $mercury;
-
-                    @media (max-width: 450px) {
-                        width: 95%;
-                    }
 
                     &:hover, &:focus, &:active {
                         background-color: $mercury;
@@ -106,33 +102,36 @@
 
             .menu-item-has-children {
 
+                &:hover {
+                    a {
+                        background-color: $mercury;
+                    }
+                }
+
                 a {
                     transition: font-weight 0.1s ease;
                     width: 100%;
                     display: block;
-                    padding: 15px 0 15px 0;
+                    padding: 8px 0 8px 0;
                     padding-left: 15px;
-                    border-radius: 20px;
+                    border-radius: 8px;
                     border: 1px solid $mercury;
-
-                    @media (max-width: 450px) {
-                        width: 95%;
-                    }
 
                     &:hover, &:focus, &:active {
                         background-color: $mercury;
                     }
                 }
                 .svg-container {
-                    width: 10%;
+                    width: 100%;
                     height: 100%;
                     position: absolute;
                     display: block;
-                    right: -20px;
+                    right: 0px;
                     top: 0;
 
-                    @media (max-width: 450px) {
-                        right: -10px;
+                    svg {
+                        right: 20px;
+                        top: 18px;
                     }
                 }
                 svg {
@@ -147,7 +146,8 @@
                 &.open {
                     a {
                         font-weight: 600;
-                        background-color: $mercury;
+                        background-color: $white;
+                        border: 1px solid white;
                     }
                     svg {
                         transform: rotate(180deg);
@@ -157,6 +157,10 @@
                         opacity: 1;
                         pointer-events: initial;
 
+                        .svg-container {
+                            display: none;
+                        }
+
                         li {
                             opacity: 1;
                             margin-top: 10px;
@@ -164,13 +168,10 @@
                             a {
                                 font-weight: 300;
                                 background-color: $white;
-
-                                @media (max-width: 450px) {
-                                    width: 95%;
-                                }
+                                border: 1px solid $mercury;
 
                                 &:hover, &:focus, &:active {
-                                    background-color: $mercury;
+                                    background-color: $mercury !important; 
                                 }
                             }
                         }
@@ -201,7 +202,7 @@
                 font-weight: 400;
                 margin-bottom: 50px;
                 display: block;
-                width: 95%;
+                width: 100%;
 
                 &::after {
                     content: '';
@@ -354,6 +355,12 @@
                 display: flex;
                 padding: 0;
                 margin: 0;
+
+                .menu-item-29044, .menu-item-29043 {
+                    @media (min-width: 1024px) {
+                        display: none !important; 
+                    }
+                }
 
                 li {
                     font-size: $p-regular;
